--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.signup {
+  backdrop-filter:blur(20px);
+}
